27 May 2010 W. Michael Petullo <mike@flyn.org>

	* Fix crash upon finalizing DMAPShare that was caused by misuse of
	avahi_entry_group_free().

25 May 2010 W. Michael Petullo <mike@flyn.org>

	* Refactor build_filter into dmap_share_build_factor.

	* Begin naming D[AP]APRecord properties after DAAP keywords so
	that direct use of g_object_get can replace if/else or table
	lookups.

	* Fix some declarations in dmap-db.c so that record IDs are
	always guint (vs. gint).

24 May 2010 W. Michael Petullo <mike@flyn.org>

	* Refactor DMAPShare, DAAPShare and DPAPShare to move code
	to DMAPShare and increase code reuse.

22 May 2010 W. Michael Petullo <mike@flyn.org>

	* Add new to_blob/new_from_blob interface to D[AP]PRecord.

20 May 2010 W. Michael Petullo <mike@flyn.org>

	* Fix finalize code for DMAPShare.

18 May 2010 W. Michael Petullo <mike@flyn.org>

	* Add another case to dpap-share.c:build_filter() in an attempt
	to support iTunes '09.

16 May 2010 W. Michael Petullo <mike@flyn.org>

	* Documentation work.

07 May 2010 W. Michael Petullo <mike@flyn.org>

	* Send artist and album sort order to DAAP clients.

17 March 2010 W. Michael Petullo <mike@flyn.org>

	* Make _dmap_share_add_playlist_to_mlcl a proper GHashFunc.

15 March 2010 W. Michael Petullo <mike@flyn.org>

	* Set def. and min. value of track, year and disc to 0 (not 1) in
	DAAPRecord.

	* Use -D instead of dmap-priv.h to define G_LOG_DOMAIN.

11 March 2010 W. Michael Petullo <mike@flyn.org>

	* Add user agent header to requests (Rhythmbox bug #610440).

	* Fix URI handling when using IPv6 IP address (Rhythmbox bug #584244).

27 February 2010 W. Michael Petullo <mike@flyn.org>

	* Change dmap_connection_get_headers so that it no longer takes a
	bytes argument and returns a SoupMessageHeaders *. This is to remain
	compatible with Rhythmbox.

12 December 2009 W. Michael Petullo <mike@flyn.org>

	* Fixed debug statement that caused segfaults of MIPS32 and
	PowerPC.
